--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplikasi Saya</title>
+    <title>Tes Online</title>
     <style>
         body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
         iframe {
@@ -14,6 +14,12 @@
     </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbxMhvCvYWpzFVY_emO5EXuvgRI1wifVxmbRH8hwrxYbTIJtCaMCMU63H2uGr1uwE8e-Rw/exec"></iframe>
+<iframe 
+    src="https://script.google.com/macros/s/AKfycbxMhvCvYWpzFVY_emO5EXuvgRI1wifVxmbRH8hwrxYbTIJtCaMCMU63H2uGr1uwE8e-Rw/exec" 
+    style="border: none; width: 100%; height: 100vh;" 
+    allow="fullscreen" 
+    allowfullscreen="true">
+</iframe>
+     
 </body>
 </html>
